Incorporado librerias al proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/988950cf62.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -52,14 +55,7 @@
     
     <main id="container-gateaux">
         <div class="row ">
-        <!-- <div class="card col-sm-12 col-md-6 col-lg-3 g-4">
-            <img src="./assets/img/tortaDiablo.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-            <h5 class="card-title">$150</h5>
-            <p class="card-text">Cupcake con frosting de chocolate blanco</p>
-            <a href="#" class="boton-comprar btn btn-warning">Añadir al Carrito</a>
-            </div>
-        </div> -->
+
         </div>
     </main>
 
@@ -92,6 +88,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <script src="/assets/datobase.js"></script>
     <script src="/assets/main2.js"></script>
 </body>
