--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <form class="d-flex">
                 <input class="form-control me-2"  id="buscador" type="text" placeholder="Cuál querés buscar?" >
                 </form>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     <i class="fas fa-shopping-cart"></i><span id="contadorCarrito">0</span>
                 </button>
 
@@ -87,10 +87,18 @@
         </div>
         </div>
     </div>
+    </div>
+
+    <footer class="text-center text-white footer__gateau" >    
+        <div class="container p-4"></div>
+        <div class="text-center p-3 footer__texto" >
+        Gateau Time - Todos los derechos reservados
+        </div>    
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-    <!-- <script src="/assets/datobase.js"></script> -->
     <script src="/assets/main2.js"></script>
+
 </body>
 </html>
